Fix layout issue with datepicker

--- a/sass/_date-picker.scss
+++ b/sass/_date-picker.scss
@@ -29,6 +29,7 @@ datepicker {
 }
 
 .date-area {
+  display: inline;
   padding-top: 1rem;
 
   .date-picker {
